syntax = "proto3";

option java_package = "com.roronoadiogo.grpc";
option java_multiple_files = true;

package com.roronoadiogo.grpc;

service ProductService {
  rpc Create(ProductRequest) returns(ProductResponse);
  rpc FindById(FindByIdRequest) returns(ProductResponse);
  rpc Delete(FindByIdRequest) returns(ProductResponse);
  rpc FindAll(EmptyRequest) returns(FindAllList);
}

message EmptyRequest{}

message FindAllList {
  repeated ProductResponse products = 1;
}

message FindByIdRequest {
  int32 id = 1;
}

message ProductRequest {
  string name = 1;
  double price = 2;
  int32 quantity_in_stock = 3;
}

message ProductResponse {
  int64 id = 1;
  string name = 2;
  double price = 3;
  int32 quantity_in_stock = 4;
}